crates/turborepo/tests/snapshots/single_package_dry_run_test__single_package_dry_run.snap
---
source: crates/turborepo/tests/single_package_dry_run_test.rs
expression: stdout.to_string()
---
   • Running build
   • Remote caching disabled


Global Hash Inputs
  Global Files                          = 2
  External Dependencies Hash            = 
  Global Cache Key                      = I can’t see ya, but I know you’re here
  Global Env Vars                       = 
  Global Env Vars Values                = 
  Inferred Global Env Vars Values       = 
  Global Passed Through Env Vars        = 
  Global Passed Through Env Vars Values = 
  Engines Values                        = 

Tasks to Run
build
  Task                           = build
  Hash                           = 73f6f1ec03e09249
  Cached (Local)                 = false
  Cached (Remote)                = false
  Command                        = echo building > foo.txt
  Outputs                        = foo.txt
  Log File                       = .turbo/turbo-build.log
  Dependencies                   = 
  Dependents                     = 
  With                           = 
  Inputs Files Considered        = 4
  Env Vars                       = 
  Env Vars Values                = 
  Inferred Env Vars Values       = 
  Passed Through Env Vars        = 
  Passed Through Env Vars Values = 
  Resolved Task Definition       = {"outputs":["foo.txt"],"cache":true,"dependsOn":[],"inputs":[],"outputLogs":"full","persistent":false,"interruptible":false,"env":[],"passThroughEnv":null,"interactive":false}
  Framework                      =
